dashboard/dmx-dashboard.css
.flex-container {
    background-color: DodgerBlue;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.flex-container > .flex-item {
    background-color: #312e2e36;
    margin: 10px;
    padding: 20px;
    font-size: 30px;
    display: block;
    direction: rtl;
}

.flex-container > .flex-item > h2 {
    text-align: center;
}
.flex-container > .flex-item > label {
    float: left;
    
}

.slider {
    direction: ltr;
}
.slider-input {
    width: 37px;
    float: right;
    padding: 5px;
}

